# api

./: .gitignore  Cargo.toml  NomadFile.js  Procfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: check.yml  deploy.yml
api/: Cargo.toml
api/src/: database.rs  errors.rs  logger.rs  mailer.rs  main.rs  settings.rs
api/src/actors/: mod.rs
api/src/actors/resource/: mod.rs
api/src/actors/subscription/: mod.rs  on_resource_created.rs
api/src/jobs/: create_resources.rs  mod.rs  populate_resources.rs
api/src/lib/: create_demo_data_for_user.rs  token.rs  util.rs
api/src/models/: mod.rs
api/src/models/integration/: model.rs
api/src/models/list/: model.rs
api/src/models/resource/: mod.rs  model.rs
api/src/models/user/: mod.rs
api/src/routes/: index.rs  integration.rs  list.rs  mod.rs  resource.rs  resource_import.rs
api/src/routes/webhooks/: mod.rs
auth0/: create-user-webhook.js
config/: default.json  production.json
migrations/: 20210124-235540-00.add-resource-tags.js  NomadFile.js  package-lock.json  package.json  schemas.js  sync-indexes.js
migrations/migrations/: 20201129-172729-00.create-users.js
scripts/: down.sh  ensure-indexes.js  ensure-slugs.js  sync-indexes.js  up.sh
src/: auth.rs  context.rs  database.rs  errors.rs  logger.rs  mailer.rs  main.rs  rabbit_mq.rs  settings.rs
src/actors/: mod.rs  subscription.rs
src/actors/resource/: mod.rs
src/actors/subscription/: on_list_removed.rs  on_resource_created.rs
src/components/: mod.rs
src/components/collection/: model.rs  route.rs
src/components/discover/: route.rs
src/components/list/: model.rs  route.rs
src/components/resource/: model.rs  route.rs
src/components/user/: model.rs  route.rs
src/components/webhooks/: model.rs  route.rs
src/emails/: mod.rs
src/integrations/: rss.rs
src/jobs/: create_resources.rs  populate_resources.rs
src/lib/: create_demo_data_for_user.rs  create_demo_lists.rs  date.rs  google.rs  id.rs  mod.rs  pagination.rs  resource_metadata.rs  serde.rs  token.rs  util.rs
src/models/: integration.rs  list.rs  mod.rs  resource.rs  user.rs
src/models/integration/: listas_subscription.rs  mod.rs  model.rs  rss.rs  subscription.rs
src/models/like/: mod.rs  model.rs
src/models/list/: mod.rs  model.rs  queries.rs
src/models/resource/: mod.rs  model.rs
src/models/user/: mod.rs  model.rs
src/routes/: discover.rs  index.rs  integration.rs  like.rs  list.rs  list_by_slug.rs  mod.rs  resource.rs  resource_import.rs  resource_metadata.rs  user.rs
src/routes/webhooks/: paddle.rs  rss.rs
src/scripts/: mod.rs  populate_resources.rs
static/: index.html
