[package]
name = "listas"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.10.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_derive = "1.0.116"
actix-web = "3.1.0"
actix-cors = "0.5.0"
wither = "0.9.0"
thiserror = "1.0.24"
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.12"
actix-files = "0.5.0"
actix-web-httpauth = "0.5.0"
# Do not update until actix web runs on tokio v1
reqwest = { version = "0.10.10", features = ["json"] }
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
lettre = "0.9"
lettre_email = "0.9.4"
maud = "0.22.1"
itertools = "0.10.0"
url = "2.2.0"
select = "0.5.0"
futures = "0.3.12"
rand = "0.8.3"
Inflector = "0.11.4"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
]
