[package]
name = "listas"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.116"
actix-web = "4.0.0-beta.9"
actix-cors = "0.6.0-beta.2"
actix-web-httpauth = "0.6.0-beta.2"
wither = "0.9.0"
thiserror = "1.0.24"
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.13"
# Do not update until actix web runs on tokio v1
reqwest = { version = "0.11.5", features = ["json"] }
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
lettre = "0.9"
lettre_email = "0.9.4"
maud = "0.22.1"
itertools = "0.10.0"
url = "2.2.1"
select = "0.5.0"
futures = "0.3.13"
rand = "0.8.3"
Inflector = "0.11.4"
slug = "0.1.4"
validator = { version = "0.12", features = ["derive"] }
serde_qs = "0.8.3"
strum = { version = "0.20.0", features = ["derive"] }
serde_with = "1.7.0"
# Do not update until actix web runs on tokio v1
actix = "0.12.0"
async-trait = "0.1.48"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-cargo-test",
]
